--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/config/config.ts"],
   "exclude": ["node_modules"]
 }
