--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "Jorge Mendanha Cruz",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
+    "node-geocoder": "^4.4.1",
     "redis": "^5.8.2",
     "redis-om": "^0.4.7",
     "reflect-metadata": "^0.2.2",
