--- a/.github/workflows/main_multi-api-gateway.yml
+++ b/.github/workflows/main_multi-api-gateway.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          # npm run test --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -51,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_90A14396DBA947AE94CB479A0D6ABB17 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_47B3384311F74BAB8E4F880A56B56AF3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_40DEB20F9DA24BACAF20CE799B7A6186 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F8BD742CEEBD40E99F25D5DE5835A07D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_76ED5E3133FD4D5E93296C46C49E62AD }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F0709E7EB2E34CA59B77EF790777927F }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -62,5 +62,4 @@ jobs:
           app-name: 'multi-api-gateway'
           slot-name: 'Production'
           package: .
-
           
